--- a/internal.html
+++ b/internal.html
@@ -153,6 +153,25 @@
         </div>
       </section>
 
+      <!-- MODAL -->
+
+      <div class="modal-container">
+        <div class="popup">
+          <h2 class="modal-title"></h2>
+          <form class="modal-form">
+            <label for="title">Ism Sharifingiz</label>
+            <input type="text" id="title" placeholder="person">
+            <label for="passport">Passport seriya raqamingiz</label>
+            <input type="text" id="passport" placeholder="AA 1234567">
+            <label for="tel">Telefon raqamingiz</label>
+            <input type="number" id="tel" placeholder="+998 90 123 45 67" maxlength="13">
+            <label for="tel">Tozalash maydoni (kv metr)</label>
+            <input type="number" id="tel" placeholder="100">
+            <button href="#" class="servicePage-list__item-link">Заказать</button>
+          </form>
+        </div>
+      </div>
+
   </main>
 
   <footer class="site-footer">
@@ -261,6 +280,7 @@
 
   <script src="./js/bootstrap.min.js"></script>
   <script src="./js/header.js"></script>
+  <script src="./js/modal.js"></script>
 
 </body>
 </html>
