--- a/aboutCompany.html
+++ b/aboutCompany.html
@@ -48,14 +48,14 @@
 
   </main>
 
-  <footer class="site-footer">
+  <footer class="site-footer" id="footer-id">
     <div class="container">
       <div class="footer__box">
         <ul class="footer-list">
           <li class="footer-menu__list-item">
-            <a class="footer-logo" href="./index.html">Build a beautiful <br> product with Align</a>
+            <p class="footer-logo" href="./index.html">Чистота вместе <br> с нами !!!</p>
             <p class="footer-text">
-              Align contains all the pages and sections needed to create beautiful digital products with ease.
+              Подписывайтесь на нас
             </p>
             <ul class="footer-contact__list">
               <li class="footer-contact__list-item">
@@ -81,52 +81,25 @@
           <li class="footer-menu__list-item">
             <ul>
               <li class="footer-list__item-title">
-                <h4>Product</h4>
+                <h4>Cтраницы</h4>
               </li>
               <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">About Us</a>
+                <a class="footer-list__pages-link" href="./index.html">Главная странитца</a>
               </li>
               <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Blog</a>
+                <a class="footer-list__pages-link" href="#footer-id">Контакт</a>
+              </li>
+              <li class="footer-list__list-item">
+                <a class="footer-list__pages-link" href="./aboutCompany.html">о компании</a>
               </li>
             </ul>
           </li>
           <li class="footer-menu__list-item">
             <ul>
               <li class="footer-list__item-title">
-                <h4>Features</h4>
+                <img class="footer-qr__code" src="./img/QR.jpg" alt="">
               </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Smart Watch</a>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Head Phone</a>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Home security</a>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Smart Lock</a>
-              </li>
-            </ul>
-          </li>
-          <li class="footer-menu__list-item">
-            <ul>
-              <li class="footer-list__item-title">
-                <h4>About Us</h4>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Who we are</a>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Contact us</a>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">support</a>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">FAQ</a>
-              </li>
+              
               
             </ul>
           </li>
@@ -134,20 +107,6 @@
       </div>
       <div class="footer-end">
         <a class="footer-logotip" href="./index.html">LOGO</a>
-        <p class="footer-end__text">
-          | © Template by
-          <a href="#">Flowbase</a>
-          - Powered by
-          <a href="#">Webflow</a>
-        </p>
-        <ul class="footer-link__list">
-          <li class="footer-link__list-item">
-            <a href="#" class="footer-link__list-link">Overview</a>
-          </li>
-          <li class="footer-link__list-item">
-            <a href="#" class="footer-link__list-link">Pages</a>
-          </li>
-        </ul>
       </div>
     </div>
   </footer>
