--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/all.min.css">
   <link rel="stylesheet" href="css/main.css">
+
    <!-- Font -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,16 +24,16 @@
 
         <ul class="site__navbar-list">
           <li class="site-navbar__list-item">
-            <a href="#" class="site-navbar__list-link">Overview</a>
+            <a href="./index.html" class="site-navbar__list-link">Главная странитца</a>
           </li>
           <li class="site-navbar__list-item">
-            <a href="#" class="site-navbar__list-link">Pages</a>
+            <a href="#footer-id" class="site-navbar__list-link">Контакт</a>
           </li>
           <li class="site-navbar__list-item">
             <a href="./aboutCompany.html" class="site-navbar__list-link">о компании</a>
           </li>
           <li class="site-navbar__list-item site-navbar__list-item-btn">
-            <a href="#" class="site-navbar__list-link site-navbar__btn">вызов</a>
+            <a href="tel:+998971644994" class="site-navbar__list-link site-navbar__btn">вызов</a>
           </li>
         </ul>
 
@@ -98,14 +99,14 @@
                 <h3 class="service-list__title">
                   Уборка внутри дома
                 </h3>
-                <a class="service-list__link" href="./internal.html"><span>Batafsil</span> <i class="fas fa-right-to-bracket"></i></a>
+                <a class="service-list__link" href="./internal.html"><span>в деталях</span> <i class="fas fa-right-to-bracket"></i></a>
               </li>
               <li class="service-list__item">
                 <img src="./img/carousel1.jpg" alt="">
                 <h3 class="service-list__title">
-                  Tashqi fasat tozalash
+                  Уборка с наружы
                 </h3>
-                <a class="service-list__link" href="./external.html"><span>Batafsil</span> <i class="fas fa-right-to-bracket"></i></a>
+                <a class="service-list__link" href="./external.html"><span>в деталях</span> <i class="fas fa-right-to-bracket"></i></a>
               </li>
             </ul>
           </div>
@@ -114,14 +115,14 @@
 
   </main>
 
-  <footer class="site-footer">
+  <footer class="site-footer" id="footer-id">
     <div class="container">
       <div class="footer__box">
         <ul class="footer-list">
           <li class="footer-menu__list-item">
-            <p class="footer-logo" href="./index.html">Build a beautiful <br> product with Align</p>
+            <p class="footer-logo" href="./index.html">Чистота вместе <br> с нами !!!</p>
             <p class="footer-text">
-              Align contains all the pages and sections needed to create beautiful digital products with ease.
+              Подписывайтесь на нас
             </p>
             <ul class="footer-contact__list">
               <li class="footer-contact__list-item">
@@ -147,32 +148,16 @@
           <li class="footer-menu__list-item">
             <ul>
               <li class="footer-list__item-title">
-                <h4>Product</h4>
+                <h4>Cтраницы</h4>
               </li>
               <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">About Us</a>
+                <a class="footer-list__pages-link" href="./index.html">Главная странитца</a>
               </li>
               <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Blog</a>
-              </li>
-            </ul>
-          </li>
-          <li class="footer-menu__list-item">
-            <ul>
-              <li class="footer-list__item-title">
-                <h4>Features</h4>
+                <a class="footer-list__pages-link" href="#footer-id">Контакт</a>
               </li>
               <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Smart Watch</a>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Head Phone</a>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Home security</a>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Smart Lock</a>
+                <a class="footer-list__pages-link" href="./aboutCompany.html">о компании</a>
               </li>
             </ul>
           </li>
