--- a/external.html
+++ b/external.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dars-9</title>
-  <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/all.min.css">
   <link rel="stylesheet" href="css/main.css">
+  
    <!-- Font -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,85 +43,63 @@
   </header>
 
   <main class="site-main">
+    <section class="site-section">
+      <div class="container">
+        <div class="service-section__box">
+          <h2 class="section-title">
+            Уборка с наружы
+          </h2>
+          <ul class="servicePage-list"></ul>
+        </div>
+      </div>
+    </section>
 
-      <section class="main-head">
-        <div class="container">
-          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./img/carousel3.jpg" class="d-block w-100 carousel-img" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./img/carousel3.jpg" class="d-block w-100 carousel-img" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./img/carousel3.jpg" class="d-block w-100 carousel-img" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+     <!-- MODAL -->
+
+     <div class="modal-container">
+      <div class="popup">
+        <h2 class="modal-title"></h2>
+        <form class="modal-form">
+          <label for="title">Имя</label>
+          <input type="text" id="title" placeholder="абс....">
+          <label for="ltitle">Фамилия</label>
+          <input type="text" id="ltitle" placeholder="абс....">
+          <label for="passport">Адрес</label>
+          <input type="text" id="passport" placeholder="город, ул. дом">
+          <label for="tel">Тел:</label>
+          <input type="number" id="tel" placeholder="+998 90 123 45 67" maxlength="13">
+          <button class="servicePage-list__item-link" id="modal-btn__zakaz">Заказать</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- template card -->
+
+    <template id="product-template">
+      <li class="servicePage-list__item">
+        <img class="service-card__img" src="./img/carousel1.jpg" alt="">
+        <div class="servicePage-list__item-body">
+          <h3 class="servicePage-list__title">
+            Xona ichkini tozalash
+          </h3>
+          <p class="servicePage-list__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, possimus.
+          </p>
+          <button id="external-btn" class="servicePage-list__item-link">Заказать</button>
         </div>
-      </section>
-      <section class="site-section">
-        <div class="container">
-          <div class="service-section__box">
-            <h2 class="section-title">
-              Наши услуги
-            </h2>
-            <ul class="service-list">
-              <li class="service-list__item">
-                <img src="./img/carousel1.jpg" alt="">
-                <h3 class="service-list__title">
-                  Xona ichkini tozalash
-                </h3>
-                <a class="service-list__link" href="./internal.html"><span>Batafsil</span> <i class="fas fa-right-to-bracket"></i></a>
-              </li>
-              <li class="service-list__item">
-                <img src="./img/carousel1.jpg" alt="">
-                <h3 class="service-list__title">
-                  Tashqi fasat tozalash
-                </h3>
-                <a class="service-list__link" href="./external.html"><span>Batafsil</span> <i class="fas fa-right-to-bracket"></i></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
+      </li>
+    </template> 
 
   </main>
 
-  <footer class="site-footer">
+  <footer class="site-footer" id="footer-id">
     <div class="container">
       <div class="footer__box">
         <ul class="footer-list">
           <li class="footer-menu__list-item">
-            <a class="footer-logo" href="./index.html">Build a beautiful <br> product with Align</a>
+            <p class="footer-logo" href="./index.html">Чистота вместе <br> с нами !!!</p>
             <p class="footer-text">
-              Align contains all the pages and sections needed to create beautiful digital products with ease.
+              Подписывайтесь на нас
             </p>
             <ul class="footer-contact__list">
               <li class="footer-contact__list-item">
@@ -147,52 +125,25 @@
           <li class="footer-menu__list-item">
             <ul>
               <li class="footer-list__item-title">
-                <h4>Product</h4>
+                <h4>Cтраницы</h4>
               </li>
               <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">About Us</a>
+                <a class="footer-list__pages-link" href="./index.html">Главная странитца</a>
               </li>
               <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Blog</a>
+                <a class="footer-list__pages-link" href="#footer-id">Контакт</a>
+              </li>
+              <li class="footer-list__list-item">
+                <a class="footer-list__pages-link" href="./aboutCompany.html">о компании</a>
               </li>
             </ul>
           </li>
           <li class="footer-menu__list-item">
             <ul>
               <li class="footer-list__item-title">
-                <h4>Features</h4>
+                <img class="footer-qr__code" src="./img/QR.jpg" alt="">
               </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Smart Watch</a>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Head Phone</a>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Home security</a>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Smart Lock</a>
-              </li>
-            </ul>
-          </li>
-          <li class="footer-menu__list-item">
-            <ul>
-              <li class="footer-list__item-title">
-                <h4>About Us</h4>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Who we are</a>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">Contact us</a>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">support</a>
-              </li>
-              <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="#">FAQ</a>
-              </li>
+              
               
             </ul>
           </li>
@@ -200,26 +151,12 @@
       </div>
       <div class="footer-end">
         <a class="footer-logotip" href="./index.html">LOGO</a>
-        <p class="footer-end__text">
-          | © Template by
-          <a href="#">Flowbase</a>
-          - Powered by
-          <a href="#">Webflow</a>
-        </p>
-        <ul class="footer-link__list">
-          <li class="footer-link__list-item">
-            <a href="#" class="footer-link__list-link">Overview</a>
-          </li>
-          <li class="footer-link__list-item">
-            <a href="#" class="footer-link__list-link">Pages</a>
-          </li>
-        </ul>
       </div>
     </div>
   </footer>
 
-  <script src="./js/bootstrap.min.js"></script>
   <script src="./js/header.js"></script>
+  <script src="./js/external.js"></script>
 
 </body>
 </html>
