--- a/external.html
+++ b/external.html
@@ -23,16 +23,19 @@
 
         <ul class="site__navbar-list">
           <li class="site-navbar__list-item">
-            <a href="#" class="site-navbar__list-link">Overview</a>
+            <a href="./index.html" class="site-navbar__list-link">Главная странитца</a>
           </li>
           <li class="site-navbar__list-item">
-            <a href="#" class="site-navbar__list-link">Pages</a>
+            <a href="#footer-id" class="site-navbar__list-link">Контакт</a>
+          </li>
+          <li class="site-navbar__list-item">
+            <a href="./humans.html" class="site-navbar__list-link">Сотрудники</a>
           </li>
           <li class="site-navbar__list-item">
             <a href="./aboutCompany.html" class="site-navbar__list-link">о компании</a>
           </li>
           <li class="site-navbar__list-item site-navbar__list-item-btn">
-            <a href="#" class="site-navbar__list-link site-navbar__btn">вызов</a>
+            <a href="tel:+998971644994" class="site-navbar__list-link site-navbar__btn">вызов</a>
           </li>
         </ul>
 
@@ -140,7 +143,7 @@
           </li>
           <li class="footer-menu__list-item">
             <ul>
-              <li class="footer-list__item-title">
+              <li class="footer-list__list-item">
                 <img class="footer-qr__code" src="./img/QR.jpg" alt="">
               </li>
               
