--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <a href="#footer-id" class="site-navbar__list-link">Контакт</a>
           </li>
           <li class="site-navbar__list-item">
+            <a href="./humans.html" class="site-navbar__list-link">Сотрудники</a>
+          </li>
+          <li class="site-navbar__list-item">
             <a href="./aboutCompany.html" class="site-navbar__list-link">о компании</a>
           </li>
           <li class="site-navbar__list-item site-navbar__list-item-btn">
