--- a/internal.html
+++ b/internal.html
@@ -161,7 +161,7 @@
 
   <script src="./js/header.js"></script>
   <script src="./js/internal.js"></script>
-  <script src="./js/modal.js"></script>
+  <!-- <script src="./js/modal.js"></script> -->
 
 </body>
 </html>
