--- a/aboutCompany.html
+++ b/aboutCompany.html
@@ -33,10 +33,10 @@
           <li class="site-navbar__list-item">
             <a id="4" href="./aboutCompany.html" class="site-navbar__list-link">о компании</a>
           </li>
+          <li class="site-navbar__list-item site-navbar__list-item-btn">
+            <a href="tel: +998971644994" class="site-navbar__list-link site-navbar__btn">вызов</a>
+          </li>
         </ul>
-        <!-- <li class="site-navbar__list-item site-navbar__list-item-btn"> -->
-          <a href="tel: +998971644994" class="site-navbar__list-link site-navbar__btn">вызов</a>
-        <!-- </li> -->
 
 
         <button class="site-navbar__bars"><i class="fas fa-bars-staggered"></i></button>
