--- a/aboutCompany.html
+++ b/aboutCompany.html
@@ -28,7 +28,7 @@
             <a id="2" href="#footer-id" class="site-navbar__list-link">Контакт</a>
           </li>
           <li class="site-navbar__list-item">
-            <a id="3" href="./humans.html" class="site-navbar__list-link">Сотрудники</a>
+            <a id="3" href="./huMans.html" class="site-navbar__list-link">Сотрудники</a>
           </li>
           <li class="site-navbar__list-item">
             <a id="4" href="./aboutCompany.html" class="site-navbar__list-link">о компании</a>
