--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     <div class="container">
       <nav class="site-navbar">
 
-        <a href="./index.html" class="site-logo">LOGO</a>
+        <a href="./inDex.html" class="site-logo">LOGO</a>
 
         <ul class="site__navbar-list">
           <li class="site-navbar__list-item">
-            <a href="./index.html" class="site-navbar__list-link">Главная странитца</a>
+            <a href="./inDex.html" class="site-navbar__list-link">Главная странитца</a>
           </li>
           <li class="site-navbar__list-item">
             <a href="#footer-id" class="site-navbar__list-link">Контакт</a>
           </li>
           <li class="site-navbar__list-item">
-            <a href="./humans.html" class="site-navbar__list-link">Сотрудники</a>
+            <a href="./huMans.html" class="site-navbar__list-link">Сотрудники</a>
           </li>
           <li class="site-navbar__list-item">
             <a href="./aboutCompany.html" class="site-navbar__list-link">о компании</a>
