--- a/external.html
+++ b/external.html
@@ -19,7 +19,7 @@
     <div class="container">
       <nav class="site-navbar">
 
-        <a href="./inDex.html" class="site-logo">LOGO</a>
+        <a href="./deTailedPage.html" class="site-logo">LOGO</a>
 
         <ul class="site__navbar-list">
           <li class="site-navbar__list-item">
@@ -59,22 +59,26 @@
 
      <!-- MODAL -->
 
-     <div class="modal-container">
-      <div class="popup">
-        <h2 class="modal-title"></h2>
-        <form class="modal-form">
-          <label for="title">Имя</label>
-          <input type="text" id="title" placeholder="абс....">
-          <label for="ltitle">Фамилия</label>
-          <input type="text" id="ltitle" placeholder="абс....">
-          <label for="passport">Адрес</label>
-          <input type="text" id="passport" placeholder="город, ул. дом">
-          <label for="tel">Тел:</label>
-          <input type="number" id="tel" placeholder="+998 90 123 45 67" maxlength="13">
-          <button class="servicePage-list__item-link" id="modal-btn__zakaz">Заказать</button>
-        </form>
+     <div class="modal-container" id="mdnContaiiner">
+        <div class="popup">
+          <h2 class="modal-title"></h2>
+          <form class="modal-form">
+            <label for="title">Имя</label>
+            <input type="text" id="title" placeholder="абс....">
+            <label for="ltitle">Фамилия</label>
+            <input type="text" id="ltitle" placeholder="абс....">
+            <label for="passport">Адрес</label>
+            <input type="text" id="passport" placeholder="город, ул. дом">
+            <label for="tel">Тел:</label>
+            <input type="number" id="tel" placeholder="90 123 45 67" maxlength="13">
+            <label for="date">Время уборки</label>
+            <input type="datetime-local" id="date" placeholder="12.12.1212">
+            <label for="commint">каминтария</label>
+            <input type="text" id="commint" placeholder="каминт">
+            <button class="servicePage-list__item-link" id="modal-btn__zakaz">Заказать</button>
+          </form>
+        </div>
       </div>
-    </div>
 
     <!-- template card -->
 
@@ -88,7 +92,8 @@
           <p class="servicePage-list__text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, possimus.
           </p>
-          <button id="external-btn" class="servicePage-list__item-link">Заказать</button>
+          <button 
+          id="mdlBtn"  class="servicePage-list__item-link">Заказать</button>
         </div>
       </li>
     </template> 
