--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dars-9</title>
+  <title>Moy Uborky</title>
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/all.min.css">
   <link rel="stylesheet" href="css/main.css">
@@ -20,7 +20,7 @@
     <div class="container">
       <nav class="site-navbar">
 
-        <a href="./inDex.html" class="site-logo">LOGO</a>
+        <a href="./huMans.html" class="site-logo">LOGO</a>
 
         <ul class="site__navbar-list">
           <li class="site-navbar__list-item">
@@ -57,27 +57,6 @@
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./img/carousel3.jpg" class="d-block w-100 carousel-img" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./img/carousel3.jpg" class="d-block w-100 carousel-img" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./img/carousel3.jpg" class="d-block w-100 carousel-img" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-                </div>
-              </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -181,6 +160,7 @@
     </div>
   </footer>
 
+  <script src="./js/main.js"></script>
   <script src="./js/bootstrap.min.js"></script>
   <script src="./js/header.js"></script>
 
