--- a/aboutCompany.html
+++ b/aboutCompany.html
@@ -18,7 +18,7 @@
     <div class="container">
       <nav class="site-navbar">
 
-        <a href="./index.html" class="site-logo">LOGO</a>
+        <a href="./index.html" class="site-logo"><img src="./img/logo.png" alt=""></a>
 
         <ul class="site__navbar-list">
           <li class="site-navbar__list-item">
