--- a/aboutCompany.html
+++ b/aboutCompany.html
@@ -18,7 +18,7 @@
     <div class="container">
       <nav class="site-navbar">
 
-        <a href="./index.html" class="site-logo"><img src="./img/logo.png" alt=""></a>
+        <a href="./index.html" class="site-logo"><img src="./img/logo.png" alt="Чистый дом"></a>
 
         <ul class="site__navbar-list">
           <li class="site-navbar__list-item">
@@ -58,7 +58,7 @@
         </p>
         <a href="tel:+998971644994" class="company-location"><i class="fas fa-phone"></i><span> +998 97 164 49 94</span></a>
         <span class="company-adress">Shahar. tuman. ko'cha uy.</span>
-        <iframe class="company-maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11986.567283091861!2d69.2397136006685!3d41.316655000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b40d847941d%3A0x5765a18b352df71e!2sTashkent%20City%20Park!5e0!3m2!1sru!2s!4v1667683623843!5m2!1sru!2s" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe class="company-maps" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3001.266386503971!2d69.334126!3d41.215965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDHCsDEyJzU3LjUiTiA2OcKwMjAnMDIuOSJF!5e0!3m2!1sru!2s!4v1668019627106!5m2!1sru!2s"  height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </main>
@@ -121,7 +121,7 @@
         </ul>
       </div>
       <div class="footer-end">
-        <a class="footer-logotip" href="./index.html">LOGO</a>
+        <a class="footer-logotip" href="./index.html"><img src="./img/logo.png" alt="Чистый дом"></a>
       </div>
     </div>
   </footer>
