--- a/internal.html
+++ b/internal.html
@@ -19,7 +19,7 @@
     <div class="container">
       <nav class="site-navbar">
 
-        <a href="./inDex.html" class="site-logo">LOGO</a>
+        <a href="./inDex.html" class="site-logo"><img src="./img/logo.png" alt="Чистый дом"></a>
 
         <ul class="site__navbar-list">
           <li class="site-navbar__list-item">
@@ -162,7 +162,7 @@
         </ul>
       </div>
       <div class="footer-end">
-        <a class="footer-logotip" href="./index.html">LOGO</a>
+        <a class="footer-logotip" href="./index.html"><img src="./img/logo.png" alt="Чистый дом"></a>
       </div>
     </div>
   </footer>
