finished finished tugadi

--- a/aboutCompany.html
+++ b/aboutCompany.html
@@ -48,9 +48,9 @@
     <div class="container">
       <div class="company__section-box">
         <h1 class="company-title">
-          <img src="#" alt="">
+          <img class="company-title__img" src="./img/logo.png" alt="./img/logo.png">
           <span>
-            Company name
+            Чистый дом
           </span>
         </h1>
         <p class="company-desc">
@@ -77,19 +77,10 @@
                 <a class="brend-icon" href="https://facebook.com" target="_blank"><i class="brend-icon__item fa-brands fa-facebook-f"></i></a>
               </li>
               <li class="footer-contact__list-item">
-                <a class="brend-icon" href="https://twitter.com" target="_blank"><i class="brend-icon__item fa-brands fa-twitter"></i></a>
-              </li>
-              <li class="footer-contact__list-item">
-                <a class="brend-icon" href="https://www.youtube.com/" target="_blank"><i class="brend-icon__item fa-brands fa-youtube"></i></i></a>
-              </li>
-              <li class="footer-contact__list-item">
                 <a class="brend-icon" href="https://web.telegram.org" target="_blank"><i class="brend-icon__item fa-brands fa-telegram"></i></a>
               </li>
               <li class="footer-contact__list-item">
                 <a class="brend-icon" href="https://www.instagram.com" target="_blank"><i class="brend-icon__item fa-brands fa-instagram"></i></a>
-              </li>
-              <li class="footer-contact__list-item">
-                <a class="brend-icon" href="https://ru.linkedin.com" target="_blank"><i class="brend-icon__item fa-brands fa-linkedin-in"></i></a>
               </li>
             </ul>
           </li>
@@ -111,7 +102,7 @@
           </li>
           <li class="footer-menu__list-item">
             <ul>
-              <li class="footer-list__item-title">
+              <li class="footer-list__list-item">
                 <img class="footer-qr__code" src="./img/QR.jpg" alt="">
               </li>
               
