--- a/deTailedPage.html
+++ b/deTailedPage.html
@@ -108,7 +108,7 @@
           </li>
           <li class="footer-menu__list-item">
             <ul>
-              <li class="footer-list__item-title">
+              <li class="footer-list__list-item">
                 <img class="footer-qr__code" src="./img/QR.jpg" alt="">
               </li>
               
