--- a/aboutCompany.html
+++ b/aboutCompany.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dars-9</title>
+  <title>Чистый дом</title>
   <link rel="stylesheet" href="./css/all.min.css">
   <link rel="stylesheet" href="css/main.css">
    <!-- Font -->
@@ -48,7 +48,7 @@
     <div class="container">
       <div class="company__section-box">
         <h1 class="company-title">
-          <img class="company-title__img" src="./img/logo.png" alt="./img/logo.png">
+          <img class="company-title__img" src="./img/logo.png" alt=Чистый дом">
           <span>
             Чистый дом
           </span>
@@ -103,7 +103,7 @@
           <li class="footer-menu__list-item">
             <ul>
               <li class="footer-list__list-item">
-                <img class="footer-qr__code" src="./img/QR.jpg" alt="">
+                <img class="footer-qr__code" src="./img/QR.jpg" alt="Чистый дом">
               </li>
               
               
