--- a/deTailedPage.html
+++ b/deTailedPage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dars-9</title>
+  <title>Чистый дом</title>
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/all.min.css">
   <link rel="stylesheet" href="css/main.css">
@@ -109,7 +109,7 @@
           <li class="footer-menu__list-item">
             <ul>
               <li class="footer-list__list-item">
-                <img class="footer-qr__code" src="./img/QR.jpg" alt="">
+                <img class="footer-qr__code" src="./img/QR.jpg" alt="Чистый дом">
               </li>
               
               
