--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Moy Uborky</title>
+  <title>Чистый дом</title>
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/all.min.css">
   <link rel="stylesheet" href="css/main.css">
@@ -20,7 +20,7 @@
     <div class="container">
       <nav class="site-navbar">
 
-        <a href="./huMans.html" class="site-logo"><img src="./img/logo.png" alt="Чистый дом"></a>
+        <a href="./inDex.html" class="site-logo"><img src="./img/logo.png" alt="Чистый дом"></a>
 
         <ul class="site__navbar-list">
           <li class="site-navbar__list-item">
@@ -84,7 +84,7 @@
                 <a class="service-list__link" href="./internal.html"><span>в деталях</span> <i class="fas fa-right-to-bracket"></i></a>
               </li>
               <li class="service-list__item">
-                <img src="./img/carousel1.jpg" alt="">
+                <img src="./img/tashqi.jpg" alt="">
                 <h3 class="service-list__title">
                   Уборка с наружы
                 </h3>
@@ -146,7 +146,7 @@
           <li class="footer-menu__list-item">
             <ul>
               <li class="footer-list__list-item">
-                <img class="footer-qr__code" src="./img/QR.jpg" alt="">
+                <img class="footer-qr__code" src="./img/QR.jpg" alt="Чистый дом">
               </li>
               
               
