--- a/internal.html
+++ b/internal.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>уборка в доме</title>
+  <title>Чистый дом</title>
   <link rel="stylesheet" href="./css/all.min.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -88,7 +88,6 @@
           </div>
           <div class="servicePage-list__item-body">
             <h3 class="servicePage-list__title">
-              Xona ichkini tozalash
             </h3>
             <p class="servicePage-list__text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, possimus.
@@ -151,7 +150,7 @@
           <li class="footer-menu__list-item">
             <ul>
               <li class="footer-list__list-item">
-                <img class="footer-qr__code" src="./img/QR.jpg" alt="">
+                <img class="footer-qr__code" src="./img/QR.jpg" alt="Чистый дом">
               </li>
               
               
