--- a/external.html
+++ b/external.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dars-9</title>
+  <title>Чистый дом</title>
   <link rel="stylesheet" href="./css/all.min.css">
   <link rel="stylesheet" href="css/main.css">
   
@@ -19,7 +19,7 @@
     <div class="container">
       <nav class="site-navbar">
 
-        <a href="./deTailedPage.html" class="site-logo"><img src="./img/logo.png" alt="Чистый дом"></a>
+        <a href="./inDex.html" class="site-logo"><img src="./img/logo.png" alt="Чистый дом"></a>
 
         <ul class="site__navbar-list">
           <li class="site-navbar__list-item">
@@ -103,7 +103,7 @@
       <div class="footer__box">
         <ul class="footer-list">
           <li class="footer-menu__list-item">
-            <p class="footer-logo" href="./index.html">Чистота вместе <br> с нами !!!</p>
+            <p class="footer-logo">Чистота вместе <br> с нами !!!</p>
             <p class="footer-text">
               Подписывайтесь на нас
             </p>
@@ -147,7 +147,7 @@
           <li class="footer-menu__list-item">
             <ul>
               <li class="footer-list__list-item">
-                <img class="footer-qr__code" src="./img/QR.jpg" alt="">
+                <img class="footer-qr__code" src="./img/QR.jpg" alt="Чистый дом">
               </li>
               
               
