xullas shu oxiri bo'lsa kerak

--- a/external.html
+++ b/external.html
@@ -65,7 +65,7 @@
           <h2 class="modal-title"></h2>
           <form class="modal-form">
             <label for="title">Имя</label>
-            <input type="text" id="title" placeholder="абс....">
+            <input type="text" id="title" placeholder="Имя....">
             <label for="passport">Адрес</label>
             <input type="text" id="passport" placeholder="город, ул. дом">
             <label for="tel">Тел:</label>
