--- a/internal.html
+++ b/internal.html
@@ -66,7 +66,7 @@
           <h2 class="modal-title"></h2>
           <form class="modal-form">
             <label for="title">Имя</label>
-            <input class="form__inp" type="text" id="title" placeholder="абс....">
+            <input class="form__inp" type="text" id="title" placeholder="Имя....">
             <label for="passport">Адрес</label>
             <input type="text" id="passport" placeholder="город, ул. дом">
             <label for="tel">Тел:</label>
